[gd_scene load_steps=19 format=3 uid="uid://b3jitrn2a5kek"]

[ext_resource type="Script" path="res://ui/ShadowAlchemyBench/workbench_menu_controller.gd" id="1_r45yu"]
[ext_resource type="Texture2D" uid="uid://b8mugkkmdn7he" path="res://assets/sprites/shadow_alchemybench/AlchemyWorkbench.png" id="2_f36yw"]
[ext_resource type="Texture2D" uid="uid://b0xmin6uq1q1n" path="res://assets/sprites/shadow_alchemybench/BeakerBackgrounds/BeakerBGs_0001.png" id="3_cib84"]
[ext_resource type="Texture2D" uid="uid://p23cjnsvtye3" path="res://assets/sprites/shadow_alchemybench/BeakerBackgrounds/BeakerBGs_0002.png" id="4_b6k2h"]
[ext_resource type="PackedScene" uid="uid://u100efg2u1g6" path="res://ui/move_details_panel.tscn" id="5_1xbq0"]
[ext_resource type="PackedScene" uid="uid://dtx7vn1bwo1x" path="res://ui/ShadowAlchemyBench/SlottedMovesPanel/slotted_moves_container.tscn" id="5_4t0kl"]
[ext_resource type="Texture2D" uid="uid://byhb5wp1sl8l7" path="res://assets/sprites/shadow_alchemybench/BeakerBackgrounds/BeakerBGs_0003.png" id="5_l11ax"]
[ext_resource type="Texture2D" uid="uid://qmarow2u0421" path="res://assets/sprites/shadow_alchemybench/BeakerBackgrounds/BeakerBGs_0004.png" id="6_0dnid"]
[ext_resource type="Texture2D" uid="uid://ds2h1nmaxexun" path="res://assets/sprites/shadow_alchemybench/BeakerBackgrounds/BeakerBGs_0005.png" id="7_g5ll2"]
[ext_resource type="Texture2D" uid="uid://diqxdfopg6kw8" path="res://assets/sprites/combat/UI/Page.png" id="8_jbeli"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qumqv"]
resource_local_to_scene = true
texture = ExtResource("8_jbeli")
texture_margin_left = 30.0
texture_margin_top = 15.0
texture_margin_right = 30.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eblq8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0bmhr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yls0g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h0hjn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yia3b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rhkw2"]
radius = 31.0

[sub_resource type="CircleShape2D" id="CircleShape2D_r618o"]
radius = 24.0208

[node name="WorkbenchMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_r45yu")
metadata/_edit_lock_ = true

[node name="AlchemyBench" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_f36yw")
expand_mode = 2
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="AlchemyBench"]
layout_mode = 0
offset_left = 41.0
offset_top = 190.0
offset_right = 105.0
offset_bottom = 254.0
texture = ExtResource("3_cib84")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="AlchemyBench"]
layout_mode = 0
offset_left = 141.0
offset_top = 147.0
offset_right = 205.0
offset_bottom = 211.0
texture = ExtResource("4_b6k2h")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="AlchemyBench"]
layout_mode = 0
offset_left = 143.0
offset_top = 234.0
offset_right = 207.0
offset_bottom = 298.0
texture = ExtResource("5_l11ax")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect4" type="TextureRect" parent="AlchemyBench"]
layout_mode = 0
offset_left = 348.0
offset_top = 109.0
offset_right = 412.0
offset_bottom = 173.0
texture = ExtResource("6_0dnid")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect5" type="TextureRect" parent="AlchemyBench"]
layout_mode = 0
offset_left = 349.0
offset_top = 272.0
offset_right = 413.0
offset_bottom = 336.0
texture = ExtResource("7_g5ll2")
expand_mode = 1
stretch_mode = 5

[node name="Page" type="Panel" parent="."]
self_modulate = Color(0.194349, 0.194349, 0.194349, 1)
layout_mode = 0
offset_left = 424.0
offset_top = 93.0
offset_right = 653.0
offset_bottom = 374.0
theme_override_styles/panel = SubResource("StyleBoxTexture_qumqv")
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="Page"]
layout_mode = 0
offset_left = 6.0
offset_top = -6.0
offset_right = 235.0
offset_bottom = 275.0
theme_override_styles/panel = SubResource("StyleBoxTexture_qumqv")

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -634.0
offset_top = 326.0
offset_right = -579.0
offset_bottom = 340.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxEmpty_eblq8")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0bmhr")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_yls0g")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_h0hjn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yia3b")

[node name="MoveDetailsPanel" parent="." instance=ExtResource("5_1xbq0")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -166.0
offset_top = 31.0
offset_right = -20.0
offset_bottom = 94.0
grow_horizontal = 0
rotation = -0.105737
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 9.0
offset_right = 451.0
offset_bottom = 97.0
mouse_filter = 2

[node name="ShadowBooks" type="HBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -2

[node name="SlottedMovesContainer" parent="." node_paths=PackedStringArray("workbench_menu") instance=ExtResource("5_4t0kl")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -183.0
offset_top = -254.0
offset_right = -12.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
workbench_menu = NodePath("..")

[node name="ShadowSlots" type="Node" parent="."]
unique_name_in_owner = true

[node name="ShadowSlot1" type="Area2D" parent="ShadowSlots"]
unique_name_in_owner = true
position = Vector2(42, 241)
collision_layer = 4
collision_mask = 0

[node name="Marker2D" type="Marker2D" parent="ShadowSlots/ShadowSlot1"]
position = Vector2(31, -21)

[node name="Sprite2D" type="Sprite2D" parent="ShadowSlots/ShadowSlot1"]
position = Vector2(31, -21)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ShadowSlots/ShadowSlot1"]
polygon = PackedVector2Array(53, -30, 58, -17, 56, -1, 49, 5, 31, 7, 9, 2, 4, -11, 5, -23, 13, -41, 36, -55, 54, -54)

[node name="ShadowSlot2" type="Area2D" parent="ShadowSlots"]
unique_name_in_owner = true
position = Vector2(146, 170)
collision_layer = 4
collision_mask = 0

[node name="Marker2D2" type="Marker2D" parent="ShadowSlots/ShadowSlot2"]
position = Vector2(28, -8)

[node name="Sprite2D" type="Sprite2D" parent="ShadowSlots/ShadowSlot2"]
position = Vector2(28, -8)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ShadowSlots/ShadowSlot2"]
polygon = PackedVector2Array(17, -35, 27, -40, 37, -35, 46, -27, 49, -19, 49, -10, 33, 22, 22, 22, 6, -10, 6, -20, 11, -29)

[node name="ShadowSlot3" type="Area2D" parent="ShadowSlots"]
unique_name_in_owner = true
position = Vector2(269, 285)
collision_layer = 4
collision_mask = 0

[node name="Marker2D3" type="Marker2D" parent="ShadowSlots/ShadowSlot3"]
position = Vector2(-94, -20)

[node name="Sprite2D" type="Sprite2D" parent="ShadowSlots/ShadowSlot3"]
position = Vector2(-94, -20)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShadowSlots/ShadowSlot3"]
position = Vector2(-94, -20)
shape = SubResource("CircleShape2D_rhkw2")

[node name="ShadowSlot4" type="Area2D" parent="ShadowSlots"]
unique_name_in_owner = true
position = Vector2(349, 156)
collision_layer = 4
collision_mask = 0

[node name="Marker2D4" type="Marker2D" parent="ShadowSlots/ShadowSlot4"]
position = Vector2(31, -18)

[node name="Sprite2D" type="Sprite2D" parent="ShadowSlots/ShadowSlot4"]
position = Vector2(31, -18)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShadowSlots/ShadowSlot4"]
position = Vector2(31, -18)
shape = SubResource("CircleShape2D_r618o")

[node name="ShadowSlot5" type="Area2D" parent="ShadowSlots"]
unique_name_in_owner = true
position = Vector2(357, 324)
collision_layer = 4
collision_mask = 0

[node name="Marker2D5" type="Marker2D" parent="ShadowSlots/ShadowSlot5"]
position = Vector2(25, -17)

[node name="Sprite2D" type="Sprite2D" parent="ShadowSlots/ShadowSlot5"]
position = Vector2(25, -17)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ShadowSlots/ShadowSlot5"]
polygon = PackedVector2Array(20, -41, 31, -41, 49, -4, 38, 1, 12, 1, 1, -4)

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
